{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "b0c599c4-42bf-4d12-a03d-f7eb337567e1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9f03a607-32c5-411e-86bd-21a5d8224b6b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AttackLeft",
                    "type": "Button",
                    "id": "f36176d4-3b04-4d7f-abaa-8340645e680e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "AttackRight",
                    "type": "Button",
                    "id": "7b9b198a-6aee-4f20-b94d-51ede15ab0b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "04f6f29d-ecfb-4c50-8974-4c865627e1b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Use",
                    "type": "Button",
                    "id": "419b028c-4bde-4add-9ee1-1e6523350eed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "fc2a802e-4fe5-4002-9973-352d8c9b8108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CameraLeft",
                    "type": "Button",
                    "id": "759263bf-bea6-4e10-a2e9-3ee3b4762318",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CameraRight",
                    "type": "Button",
                    "id": "92c5fea7-032e-4efc-8c8a-606af485f262",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "3e577d25-1e4a-434d-9f3c-df2274619ea2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Shove",
                    "type": "Button",
                    "id": "869b0a0d-85b7-4621-9150-b3984bba35c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21bc6329-474d-4dcb-a0c7-31f73234e1c1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "AttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b9f834b-40c3-4002-a88c-de674d47c2da",
                    "path": "<Keyboard>/leftAlt",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52e48c69-4b99-4a75-bba4-80969caa05e2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6860aa7-555b-4c6f-928d-6b4e539a32d2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Use",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3799a152-27df-4c19-8fb6-07644f502895",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "684fd27d-061e-4ac5-b0c1-a075c7d51fb6",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "CameraLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e00f9eeb-a593-42aa-b87f-c039ec297caf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "CameraRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8b4d549-1bd6-4b56-9e56-7bf8fb09865a",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4dd2b82-8715-457a-a58f-b456c78bd8ed",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Shove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "wsad",
                    "id": "8e154d91-cebe-41c8-a39c-cdd1cfd94e61",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bbb6c0be-a55f-45ff-a3e7-dfce4804cb70",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "68d2842a-4cfb-4125-8768-d7586e8a5edd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7b2cda97-450b-4298-81be-403179c56d9b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a812e7a3-7cc6-45dd-9cd2-0b5938713709",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord and mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keybord and mouse",
            "bindingGroup": "Keybord and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}